<resources>

    <string name="app_name">Today ToDo List</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_today">TodayActivity</string>
    <string name="task_list_empty">Task list is empty...</string>
    <string name="menu_delete">Delete task</string>
    <string name="title">Title:</string>
    <string name="description">Description</string>
    <string name="confirm">Save</string>
    <string name="date">Date:</string>
    <string name="task_saved_message">Task saved</string>
    <string name="task_not_saved_message">Error on save task! Task do not exists!</string>
    <string name="delete_task">Delete task</string>
    <string name="edit_task_activity_title">Edit Task</string>
    <string name="complete_tasks">"Complete tasks"</string>
    <string name="active_tasks">"Active tasks"</string>
    <string name="previous_date">Previous date</string>
    <string name="next_date">Next date</string>
    <string name="today_to_do_list">Today To Do List</string>
    <string name="edit_task">Edit task</string>
    <string name="add_task">Add task</string>
    <string name="note">Note:</string>
    <string name="add_category">Add category</string>
    <string name="new_task_title_hint">New task title</string>

</resources>