<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/previous_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/next_date"
            android:src="@android:drawable/ic_media_previous" />

        <EditText
            android:id="@+id/selected_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/next_date_button"
            android:layout_toRightOf="@+id/previous_date_button"
            android:focusable="false"
            android:gravity="center"
            android:inputType="date" />

        <ImageButton
            android:id="@+id/next_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/previous_date"
            android:src="@android:drawable/ic_media_next" />
    </RelativeLayout>

    <EditText
        android:id="@+id/add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_layout"
        android:gravity="top"
        android:inputType="text"
        android:singleLine="true" />

    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tasks_list_footer"
        android:layout_below="@+id/add_task"
        android:drawSelectorOnTop="false" />

    <TextView
        android:id="@+id/android:empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/task_list_empty" />

    <TextView
        android:id="@+id/tasks_list_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="5dp" />

</RelativeLayout>