<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:dslv="http://schemas.android.com/apk/res/com.mobeta.android.demodslv"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/previous_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/next_date"
            android:src="@android:drawable/ic_media_previous"
            android:visibility="gone" />

        <TextView
            android:id="@+id/selected_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/next_date_button"
            android:layout_toRightOf="@+id/previous_date_button"
            android:focusable="false"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/next_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/previous_date"
            android:src="@android:drawable/ic_media_next"
            android:visibility="gone" />
    </RelativeLayout>

    <ImageView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_bright" />

    <RelativeLayout
        android:id="@+id/add_task_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_layout"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/add_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/new_task_title_hint"
            android:inputType="text"
            android:singleLine="true" />

        <!--
          <ImageButton

          android:id="@+id/add_task_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/add_task"
            android:gravity="top"
            android:src="@drawable/ic_add_task" />
        -->

    </RelativeLayout>

    <ImageView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_bright" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tasks_list_footer"
        android:layout_below="@+id/add_task_layout"
        android:layout_weight="1"
        android:clickable="false"
        android:drawSelectorOnTop="false"
        android:drawingCacheQuality="high"
        android:fastScrollEnabled="true"
        android:textSize="18sp" />

    <!--
         <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tasks_list_footer"
        android:layout_below="@+id/add_task_layout"
        android:drawSelectorOnTop="false" />
    -->

    <TextView
        android:id="@+id/android:empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/task_list_empty" />

    <TextView
        android:id="@+id/tasks_list_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="5dp" />

</RelativeLayout>